[gd_scene load_steps=5 format=2]

[ext_resource path="res://collectibles/collectible.tscn" type="PackedScene" id=1]
[ext_resource path="res://collectibles/gem.gd" type="Script" id=2]
[ext_resource path="res://collectibles/gem_anim.tres" type="SpriteFrames" id=3]
[ext_resource path="res://collectibles/assets/gem.wav" type="AudioStream" id=4]

[node name="Collectible" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="1"]
frames = ExtResource( 3 )

[node name="Sfx" parent="." index="2"]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="." index="5"]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
